Deleted Test-Folder, added Dropdown-Selection Parameters to API
